--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,9 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
         S3_BUCKET: ${{ secrets.S3_BUCKET }}
       run: |
-        aws s3 sync build/ s3://${{ secrets.AWS_SECRET_ACCESS_KEY }} --delete
-        aws s3 website s3://${{ secrets.AWS_SECRET_ACCESS_KEY }}/ --index-document index.html
+        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+        aws configure set region $AWS_REGION
+        aws s3 sync build/ s3://$S3_BUCKET --delete
+        aws s3 website s3://$S3_BUCKET/ --index-document index.html
+
