--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
         S3_BUCKET: ${{ secrets.S3_BUCKET }}
       run: |
-        aws s3 sync build/ s3://$S3_BUCKET --region $AWS_REGION --delete
+        aws s3 sync dist/ s3://$S3_BUCKET --region $AWS_REGION --delete
         aws s3 website s3://$S3_BUCKET/ --index-document index.html --region $AWS_REGION
 
